--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "4.x",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@types/node": "^22.9.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
@@ -34,6 +36,9 @@
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.18.5",
+    "unplugin-icons": "^0.20.1",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-inspect": "^0.8.8",
     "vue-tsc": "^2.1.8"
