--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ VITE_ENV = 'development'
 VITE_APP_TITLE = '亿智狐前端ui'
 
 # 接口地址
-VITE_APP_API_URL = 'http://127.0.0.1:8100/api'
+VITE_APP_API_URL = 'http://localhost:8100'
 
 # 本地端口
 VITE_APP_PORT = 3000
