--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,4 @@ VITE_ENV = 'production'
 VITE_APP_TITLE = '亿智狐前端ui'
 
 # 接口地址
-VITE_APP_API_URL = 'http://127.0.0.1:8200/api'
+VITE_APP_API_URL = 'http://127.0.0.1:8200'
