--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "ant-design-vue": "4.x",
+    "ant-design-vue": "4.2.6",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
