--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "openapi": "openapi2ts openapi2ts.config.ts"
   },
   "dependencies": {
     "ant-design-vue": "4.2.6",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
     "@types/node": "^22.9.1",
+    "@umijs/openapi": "^1.13.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "@vue/eslint-config-prettier": "^10.1.0",
