--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-init",
+  "name": "foxpic-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -13,7 +13,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
+    "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "openapi": "openapi2ts openapi2ts.config.ts"
@@ -22,29 +22,30 @@
     "ant-design-vue": "4.2.6",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
-    "@types/node": "^22.9.1",
-    "@umijs/openapi": "^1.13.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitejs/plugin-vue-jsx": "^4.1.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.9.3",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
-    "eslint": "^9.15.0",
-    "eslint-plugin-vue": "^9.31.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
-    "sass": "^1.81.0",
-    "typescript": "~5.6.2",
+    "sass": "^1.82.0",
+    "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.5",
     "unplugin-icons": "^0.20.1",
     "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.10",
+    "vite": "^6.0.1",
     "vite-plugin-inspect": "^0.8.8",
-    "vue-tsc": "^2.1.8"
+    "vue-tsc": "^2.1.10"
   },
   "engines": {
     "node": ">=20.17.0",
