--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "ant-design-vue": "4.2.6",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
@@ -29,8 +29,8 @@
     "@iconify/vue": "^4.1.2",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
+    "@umijs/openapi": "^1.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.7.0",
